objects/SurveyProject__c.object
<CustomObject>
    <description>A way to group employees together under one survey project, for purposes of operations and reporting.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account that this survey project is for.</description>
        <inlineHelpText>The account that this survey project is for.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Projects</relationshipLabel>
        <relationshipName>SurveyProjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DescriptionText__c</fullName>
        <description>A description of what this survey project is and why.</description>
        <inlineHelpText>A description of what this survey project is and why.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopeFirstFiscalYearEndDate__c</fullName>
        <description>The first fiscal year end date in the scope of hire dates in this survey project.</description>
        <inlineHelpText>The first fiscal year end date in the scope of hire dates in this survey project.</inlineHelpText>
        <label>Scope First Fiscal Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScopeLastFiscalYearEndDate__c</fullName>
        <description>The last fiscal year end date in the scope of hire dates in this survey project.</description>
        <inlineHelpText>The last fiscal year end date in the scope of hire dates in this survey project.</inlineHelpText>
        <label>Scope Last Fiscal Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SendNotificationBit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies whether the employees in this survey project should be included in the ongoing email notification campaign directed to store managers and executives.</description>
        <inlineHelpText>Specifies whether the employees in this survey project should be included in the ongoing email notification campaign directed to store managers and executives.</inlineHelpText>
        <label>Send Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurveyProjectEID__c</fullName>
        <description>The Enterprise ID corresponding to this survey project.</description>
        <inlineHelpText>The Enterprise ID corresponding to this survey project.</inlineHelpText>
        <label>Survey Project EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>